--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -6,14 +6,14 @@
     <div class="small-card__photo">
 
       <img
-        src="https://blog.jetbrains.com/wp-content/uploads/2023/12/Angular_-Renaissance_social_share_blog_1280x720.png"
+        src={{photoCover}}
         alt=""
         srcset=""
       >
     </div>
 
     <div class="small-card__title">
-      <h1><a href="#">Saiu a nova versão do Angular</a></h1>
+      <h1><a href="#">{{cardTitle}}</a></h1>
     </div>
 
   </div>
