--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,9 +1,11 @@
 <div class="container__menu-bar">
   <ul>
-    <li><a href="https://www.linkedin.com/in/alexandre-araujo-da-silva-0970191aa">Linkedin</a></li>
+    <li><a href="https://www.linkedin.com/in/alexandre-araujo-da-silva-0970191aa" target="_blank">Linkedin</a></li>
     <li><span>•</span></li>
-    <li><a href="https://github.com/AlexDeveloperOne">Github</a></li>
+    <li><a href="https://github.com/AlexDeveloperOne" target="_blank">Github</a></li>
     <li><span>•</span></li>
-    <li><a href="http://www.youtube.com/@alexandresilva766">Youtube</a></li>
+    <li><a href="http://www.youtube.com/@alexandresilva766" target="_blank">Youtube</a></li>
+    <li><span>•</span></li>
+    <li><span style="color: rgb(167, 136, 136);"> by ©️AlexDeveloperOne</span></li>
   </ul>
 </div>
