--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -6,7 +6,7 @@
     <div class="small-card__photo">
 
       <img
-        src={{photoCover}}
+        src="{{photoCover}}"
         alt=""
         srcset=""
       >
@@ -21,6 +21,5 @@
   <div class="container__small-card__separator">
     <hr>
   </div>
-
 
 </div>
