--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,40 +1,26 @@
 
 .container__big-card{
-
   margin-left: 20px;
   margin-right: 20px;
-  /*padding: 1px;*/
-
   width: 400px;
   height: 500px;
-/*
-  border: 0.5px solid #ffffff;
-*/
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
 }
-
 .big-card__title > h1 {
   margin-top: 15px;
   font-size: 20px;
 }
-
 .big-card__description {
   margin-top: 20px;
 }
-
 .big-card__description > p > a {
-  color: gray;
+  color: rgb(128, 128, 128);
 }
-
 .big-card__photo > img {
   width: 100%;
   min-width: 394px;
-  /*
-  min-width: 1rem;
-  height: auto;
-  */
   display: block;
 }
