--- a/src/app/pages/content/content.component.html
+++ b/src/app/pages/content/content.component.html
@@ -1,7 +1,9 @@
 <div class="container__content">
 
   <div class="content__cover">
-    <img src="{{ photoCover }}" alt="">
+    <img
+      src="{{photoCover}}"
+      alt="">
   </div>
   <div class="content__title">
     <h1>{{ contentTitle }}</h1>
@@ -9,7 +11,7 @@
 
   </div>
   <div class="content__description">
-    <a [routerLink]="['']"> << VOLTAR</a>
+    <a [routerLink]="['']"> << VOLTAR </a>
     <p>{{ contentDescription }}</p>
   </div>
 </div>
